Treatment of no breaks in filename to prevent parent overflow

--- a/pdf_reader/src/Components/Search/FileUploadProgress.module.scss
+++ b/pdf_reader/src/Components/Search/FileUploadProgress.module.scss
@@ -44,8 +44,6 @@
             align-items: flex-start;
             gap: 10px;
 
-            @media (max-width: 425px) {}
-
             &>span:nth-child(1) {
                 flex: 3;
                 font-size: 1.12rem;
@@ -57,6 +55,10 @@
 
             .Progress_text {
                 text-align: left;
+                
+                &.Progress_filename {
+                    word-break: break-all;
+                }
             }
         }
 
@@ -64,8 +66,6 @@
             width: 2.25rem;
             height: 2.25rem;
             margin: 0 0 0 auto;
-
-            @media (max-width: 425px) {}
 
             &:hover {
                 cursor: pointer;
